--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     </string>
     <string name="btn_sign_in_via_email">Sign in</string>
 
+    <!-- HomeActivity -->
+    <string name="app_home_text">Welcome!</string>
+    <string name="btn_search_song">Search song</string>
+    <string name="btn_charts">Charts</string>
+    <string name="btn_favorites">Favorites</string>
+
 </resources>
