feat: display track details on recycler item click

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <!-- Track item -->
     <string name="track_cover_image">Track cover</string>
 
+    <!-- Track Activity -->
+    <string name="track_activity_label">Lyrics</string>
+
     <!-- General -->
     <string name="app_offline">You are offline.</string>
 
