feat: add saving favorite tracks to firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
 
     <!-- Track Activity -->
     <string name="track_activity_label">Lyrics</string>
+    <string name="message_track_added_to_favorites">Track successfully added to favorites!</string>
 
     <!-- General -->
     <string name="app_offline">You are offline.</string>
