feat: add Favorites Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,9 @@
     <string name="track_activity_label">Lyrics</string>
     <string name="message_track_added_to_favorites">Track successfully added to favorites!</string>
 
+    <!-- Favorites Activity -->
+    <string name="favorites_activity_label">Favorites</string>
+
     <!-- General -->
     <string name="app_offline">You are offline.</string>
 
