feat: add removing tracks from favorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,8 @@
 
     <!-- Favorites Activity -->
     <string name="favorites_activity_label">Favorites</string>
+    <string name="message_track_removed_from_favorites">Track successfully removed from favorites!</string>
+    <string name="btn_remove_track_from_favorites">Remove from favorites</string>
 
     <!-- General -->
     <string name="app_offline">You are offline.</string>
