feat: add country picker to charts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <!-- Charts Activity -->
     <string name="charts_activity_label">Charts</string>
     <string name="charts_info">Top %1$s tracks in %2$s</string>
+    <string name="btn_select_country">Select other country</string>
 
     <!-- General -->
     <string name="app_offline">You are offline.</string>
