--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,10 @@
 
     <!-- General -->
     <string name="app_offline">You are offline.</string>
+    <string name="appwidget_text">Words Guide</string>
+
+    <!-- Widget -->
+    <string name="add_widget">Add widget</string>
+    <string name="widget_info">Recently displayed:</string>
 
 </resources>
