feat: add shong Share

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <!-- Track Activity -->
     <string name="track_activity_label">Lyrics</string>
     <string name="message_track_added_to_favorites">Track successfully added to favorites!</string>
+    <string name="share_track">Share track</string>
 
     <!-- Favorites Activity -->
     <string name="favorites_activity_label">Favorites</string>
